--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 <body>
 
 <div class="header">
-  <h1>My Website</h1>
-  <p>Welcome to my Website.</p>
+  <h1>Home</h1>
+  <p>Welcome to my home.</p>
 </div>
 
 <div class="topnav">
