--- a/project.html
+++ b/project.html
@@ -68,8 +68,8 @@
 <body>
 
 <div class="header">
-  <h1>My Website</h1>
-  <p>Welcome to my Website.</p>
+  <h1>Project</h1>
+  <p>Welcome to my project.</p>
 </div>
 
 <div class="topnav">
